# oposiciones-bot

./: .gitignore  README.md  config.example.toml  index.html  main.py  pyproject.toml
.github/workflows/: deploy.yml
assets/: BlockSelectorView-3UefCbIX.js  BlockSelectorView-866bB5xB.js  BlockSelectorView-8oPiMDQU.js  BlockSelectorView-AKJcyzi0.js  BlockSelectorView-B0ngCbgD.js  BlockSelectorView-BI9wgler.js  BlockSelectorView-CEotsNH_.js  BlockSelectorView-Cxy6P96x.js  BlockSelectorView-D7EnwuSY.js  BlockSelectorView-D93ZKQ4f.js  BlockSelectorView-D9BI7MY9.js  BlockSelectorView-DAtzsy6F.js  BlockSelectorView-tcQRzTXC.js  ExamSetupView-BQbrdI36.js  ExamSetupView-BcFQ7cGU.js  ExamSetupView-Bg6R0mX2.js  ExamSetupView-Btt6LCpn.js  ExamSetupView-Cjxpmac1.js  ExamSetupView-D9ckfgMX.js  ExamSetupView-DG-YCaMq.js  ExamSetupView-DwfVy9fE.js  ExamSetupView-DyKtEp8g.js  ExamSetupView-Dz5aHEBx.js  ExamSetupView-QdFG5Pmo.js  ExamSetupView-_rzhl6UJ.js  ExamSetupView-saeGfrd7.js  HomeView-BF2dmvdq.js  HomeView-CVDZrPpp.js  HomeView-Ck0UzOfV.js  HomeView-CujRG83u.js  HomeView-D6QNmXPH.js  HomeView-DJX-6NKX.js  HomeView-Dg8oKDQZ.js  HomeView-DhpX-WQ6.js  HomeView-Dm8_9mER.js  HomeView-O9kzGIpb.js  HomeView-eAQVDWoq.js  HomeView-mgK0GbYO.js  HomeView-tqQIfvmm.js  QuizView-BML0taZi.js  (+74 more)
data/: meta.json
data/blocks/: a1.json  a2.json  a3.json  a4.json  b1.json  b2.json  b3.json  b4.json
data/years/: 2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  (+15 more)
scripts/: preprocess_data.py
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+27 files in other folders)
